fix alignment

--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@ body {
 	background: url("./assets/bg.svg") no-repeat;
     background-size: 100% , cover;
 	background-attachment: fixed;
-}
-main {
 	width: 100vw;
 	height: 100vh;
+}
+main {
+    width: 100%;
+    height: 100%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -22,13 +24,18 @@ main {
 }
 #text-content {
 	display: flex;
-	justify-content: center;
+	/* justify-content: center; */
 	align-items: center;
 	width: 50%;
+    max-width: 555px;
 }
 .text-area {
 	width: 445px;
 	height: 245px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .text-area h1 {
 	font-weight: 700;
@@ -48,6 +55,8 @@ main {
 #stars-content {
 	display: flex;
 	width: 50%;
+    justify-content: flex-end;
+    max-width: 555px;
 }
 .rated-area {
 	width: 540px;
@@ -65,6 +74,8 @@ main {
 	align-items: center;
 	gap: 32px;
 	margin-bottom: 16px;
+    width: 445px;
+    height: 56px;
 }
 .positon-right1 {
 	position: relative;
